Update service web image to use web-design-template and add image asset

--- a/src/app.component.html
+++ b/src/app.component.html
@@ -124,8 +124,8 @@
       <div class="grid md:grid-cols-2 gap-8 md:gap-12 items-center">
         <!-- Image -->
         <div class="order-2 md:order-1">
-          <img 
-            src="assets/service-web.png" 
+          <img
+            src="assets/web-design-template-copy-space-concept.jpg"
             alt="Création de Sites Web Modernes"
             class="w-full h-auto max-h-96 object-contain rounded-lg shadow-lg hover:shadow-2xl transition-all duration-500 ease-out transform hover:-translate-y-2"
           >
