Update contact email to contact@ags-concept.com

--- a/src/contact/contact.component.html
+++ b/src/contact/contact.component.html
@@ -22,7 +22,7 @@
                     </div>
                     <div>
                         <h4 class="font-bold text-gray-900">Email</h4>
-                        <a href="mailto:agsconcept@outlook.com" class="text-gray-600 hover:text-[#E06732] transition-colors">agsconcept&#64;outlook.com</a>
+                        <a href="mailto:contact@ags-concept.com" class="text-gray-600 hover:text-[#E06732] transition-colors">contact&#64;ags-concept.com</a>
                     </div>
                 </div>
 
