--- a/src/app.component.html
+++ b/src/app.component.html
@@ -73,9 +73,9 @@
             <button (click)="scrollTo('services')" class="animate-fade-up delay-3 bg-[#E06732] text-white font-bold py-3 px-6 sm:px-8 rounded-lg text-base sm:text-lg hover:bg-[#C85A28] transition-all duration-300 transform hover:scale-105 shadow-lg">
               Découvrir nos services
             </button>
-            <a href="tel:0782928620" class="animate-fade-up delay-3 bg-[#E06732] text-white font-bold py-3 px-6 sm:px-8 rounded-lg text-base sm:text-lg hover:bg-[#C85A28] transition-all duration-300 transform hover:scale-105 shadow-lg">
+            <button (click)="callPhone()" class="animate-fade-up delay-3 bg-[#E06732] text-white font-bold py-3 px-6 sm:px-8 rounded-lg text-base sm:text-lg hover:bg-[#C85A28] transition-all duration-300 transform hover:scale-105 shadow-lg">
               +33 7 82 92 86 20
-            </a>
+            </button>
           </div>
         </div>
       </section>
